--- a/poyasnizagistu/requirements.txt
+++ b/poyasnizagistu/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.5.2
 Django==4.1.4
+django-ckeditor==6.5.1
+django-js-asset==2.0.0
 django-ranged-response==0.2.0
 django-simple-captcha==0.5.17
 Pillow==9.3.0
