--- a/poyasnizagistu/requirements.txt
+++ b/poyasnizagistu/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.5.2
 Django==4.1.4
 django-ckeditor==6.5.1
+django-cleanup==7.0.0
 django-js-asset==2.0.0
 django-ranged-response==0.2.0
 django-simple-captcha==0.5.17
+fields==5.0.0
 Pillow==9.3.0
 python-slugify==7.0.0
 sqlparse==0.4.3
