--- a/poyasnizagistu/requirements.txt
+++ b/poyasnizagistu/requirements.txt
@@ -5,6 +5,7 @@ django-cleanup==7.0.0
 django-js-asset==2.0.0
 django-ranged-response==0.2.0
 django-simple-captcha==0.5.17
+django_debug_toolbar==3.8.1
 fields==5.0.0
 Pillow==9.3.0
 python-slugify==7.0.0
